<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82A7FF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/filter_search_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_search"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/main_search"
        app:layout_constraintTop_toBottomOf="@+id/main_search" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/library_app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Enter_search"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/search_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/search_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_search" />

    <Button
        android:id="@+id/set_reminder_button"
        android:layout_width="133dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:text="@string/reminder_button"
        app:layout_constraintEnd_toStartOf="@+id/current_books_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_book" />

    <Button
        android:id="@+id/current_books_button"
        android:layout_width="194dp"
        android:layout_height="78dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/set_current_book"
        app:layout_constraintBaseline_toBaselineOf="@+id/set_reminder_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/set_reminder_button" />

    <Button
        android:id="@+id/view_library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_library"
        app:layout_constraintEnd_toStartOf="@+id/add_new_book_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_reminder_button" />

    <Button
        android:id="@+id/add_new_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/add_new_book"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_library_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_library_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/currently_reading"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_search" />

    <ImageView
        android:id="@+id/current_book"
        android:layout_width="136dp"
        android:layout_height="215dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/life_the_universe_and_everything"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/prev_book"
        android:layout_width="100dp"
        android:layout_height="165dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:src="@drawable/restaurant_at_the_end_of_the_universe"
        app:layout_constraintEnd_toStartOf="@+id/current_book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:text="@string/last_book"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/current_book"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/add_note_main"
        android:layout_width="106dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_new_note"
        app:layout_constraintStart_toEndOf="@+id/current_book"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/view_notes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_current_notes"
        app:layout_constraintStart_toEndOf="@+id/current_book"
        app:layout_constraintTop_toBottomOf="@+id/add_note_main" />

    <Button
        android:id="@+id/set_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_page"
        app:layout_constraintStart_toEndOf="@+id/current_book"
        app:layout_constraintTop_toBottomOf="@+id/view_notes_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>